Add translations for show-always option

--- a/chrome/locale/cs/prefs.dtd
+++ b/chrome/locale/cs/prefs.dtd
@@ -11,3 +11,4 @@
 <!ENTITY mintrayr.prefs.watchwindows "Sledovat okna">
 <!ENTITY mintrayr.prefs.misc "Různé">
 <!ENTITY mintrayr.prefs.clickbehavior "Chování po kliknutí">
+<!ENTITY mintrayr.prefs.showalways "Zobrazit vždy">
