--- a/chrome/locale/da/prefs.dtd
+++ b/chrome/locale/da/prefs.dtd
@@ -11,3 +11,4 @@
 <!ENTITY mintrayr.prefs.watchwindows "Observer vinduer">
 <!ENTITY mintrayr.prefs.misc "Diverse">
 <!ENTITY mintrayr.prefs.clickbehavior "Handling ved klik">
+<!ENTITY mintrayr.prefs.showalways "Vis altid">
