--- a/chrome/locale/de/prefs.dtd
+++ b/chrome/locale/de/prefs.dtd
@@ -11,3 +11,4 @@
 <!ENTITY mintrayr.prefs.watchwindows "Fenster beobachten">
 <!ENTITY mintrayr.prefs.misc "Verschiedenes">
 <!ENTITY mintrayr.prefs.clickbehavior "Klick-Verhalten">
+<!ENTITY mintrayr.prefs.showalways "Zeige immer">
