--- a/chrome/locale/es-ES/prefs.dtd
+++ b/chrome/locale/es-ES/prefs.dtd
@@ -11,3 +11,4 @@
 <!ENTITY mintrayr.prefs.watchwindows "Ventanas">
 <!ENTITY mintrayr.prefs.misc "Varios">
 <!ENTITY mintrayr.prefs.clickbehavior "Comportamiento">
+<!ENTITY mintrayr.prefs.showalways "Mostrar siempre">
