--- a/chrome/locale/fr/prefs.dtd
+++ b/chrome/locale/fr/prefs.dtd
@@ -11,3 +11,4 @@
 <!ENTITY mintrayr.prefs.watchwindows "Observer les fenêtres">
 <!ENTITY mintrayr.prefs.misc "Divers">
 <!ENTITY mintrayr.prefs.clickbehavior "Comportement du clic">
+<!ENTITY mintrayr.prefs.showalways "Afficher tout le temps">
