--- a/chrome/locale/he-IL/prefs.dtd
+++ b/chrome/locale/he-IL/prefs.dtd
@@ -11,3 +11,4 @@
 <!ENTITY mintrayr.prefs.watchwindows "צפה בחלונות">
 <!ENTITY mintrayr.prefs.misc "שונות">
 <!ENTITY mintrayr.prefs.clickbehavior "התנהגות לחיצה">
+<!ENTITY mintrayr.prefs.showalways "הצג תמיד">
