--- a/chrome/locale/hu-HU/prefs.dtd
+++ b/chrome/locale/hu-HU/prefs.dtd
@@ -11,3 +11,4 @@
 <!ENTITY mintrayr.prefs.watchwindows "Ablak elrejtése a tálcára">
 <!ENTITY mintrayr.prefs.misc "Vegyes">
 <!ENTITY mintrayr.prefs.clickbehavior "Kattintás műveletek">
+<!ENTITY mintrayr.prefs.showalways "Mindig mutassa meg">
