--- a/chrome/locale/hy-AM/prefs.dtd
+++ b/chrome/locale/hy-AM/prefs.dtd
@@ -11,3 +11,4 @@
 <!ENTITY mintrayr.prefs.watchwindows "Պատուհանները">
 <!ENTITY mintrayr.prefs.misc "Տարբեր">
 <!ENTITY mintrayr.prefs.clickbehavior "Սեղման գործողությունը">
+<!ENTITY mintrayr.prefs.showalways "Ցույց տալ միշտ">
