--- a/chrome/locale/it/prefs.dtd
+++ b/chrome/locale/it/prefs.dtd
@@ -11,3 +11,4 @@
 <!ENTITY mintrayr.prefs.watchwindows "Controlla finestre">
 <!ENTITY mintrayr.prefs.misc "Varie">
 <!ENTITY mintrayr.prefs.clickbehavior "Tasti del mouse">
+<!ENTITY mintrayr.prefs.showalways "Mostra sempre">
