--- a/chrome/locale/nl/prefs.dtd
+++ b/chrome/locale/nl/prefs.dtd
@@ -11,3 +11,4 @@
 <!ENTITY mintrayr.prefs.watchwindows "Vensters volgen">
 <!ENTITY mintrayr.prefs.misc "Diversen">
 <!ENTITY mintrayr.prefs.clickbehavior "Klikgedrag">
+<!ENTITY mintrayr.prefs.showalways "Laat altijd zien">
