--- a/chrome/locale/pl/prefs.dtd
+++ b/chrome/locale/pl/prefs.dtd
@@ -11,3 +11,4 @@
 <!ENTITY mintrayr.prefs.watchwindows "Działanie w oknach">
 <!ENTITY mintrayr.prefs.misc "Różne">
 <!ENTITY mintrayr.prefs.clickbehavior "Działanie kliknięć">
+<!ENTITY mintrayr.prefs.showalways "Pokaż zawsze">
