--- a/chrome/locale/pt-BR/prefs.dtd
+++ b/chrome/locale/pt-BR/prefs.dtd
@@ -11,3 +11,4 @@
 <!ENTITY mintrayr.prefs.watchwindows "Monitorar janelas">
 <!ENTITY mintrayr.prefs.misc "Outros">
 <!ENTITY mintrayr.prefs.clickbehavior "Comportamento do click">
+<!ENTITY mintrayr.prefs.showalways "Mostrar sempre">
