--- a/chrome/locale/ro/prefs.dtd
+++ b/chrome/locale/ro/prefs.dtd
@@ -11,3 +11,4 @@
 <!ENTITY mintrayr.prefs.watchwindows "Ferestre controlate">
 <!ENTITY mintrayr.prefs.misc "Diverse">
 <!ENTITY mintrayr.prefs.clickbehavior "Acțiuni pentru clic pe pictogramă">
+<!ENTITY mintrayr.prefs.showalways "Afișați întotdeauna">
