--- a/chrome/locale/ru-RU/prefs.dtd
+++ b/chrome/locale/ru-RU/prefs.dtd
@@ -11,3 +11,4 @@
 <!ENTITY mintrayr.prefs.watchwindows "Слежение за окнами">
 <!ENTITY mintrayr.prefs.misc "Другие">
 <!ENTITY mintrayr.prefs.clickbehavior "Реакция на кнопки мыши">
+<!ENTITY mintrayr.prefs.showalways "Показать всегда">
