--- a/chrome/locale/sl-SI/prefs.dtd
+++ b/chrome/locale/sl-SI/prefs.dtd
@@ -11,3 +11,4 @@
 <!ENTITY mintrayr.prefs.watchwindows "Opazuj okna">
 <!ENTITY mintrayr.prefs.misc "Razno">
 <!ENTITY mintrayr.prefs.clickbehavior "Vedenje klikov">
+<!ENTITY mintrayr.prefs.showalways "Prikaži vedno">
