--- a/chrome/locale/sr/prefs.dtd
+++ b/chrome/locale/sr/prefs.dtd
@@ -11,3 +11,4 @@
 <!ENTITY mintrayr.prefs.watchwindows "Посматрај прозоре">
 <!ENTITY mintrayr.prefs.misc "Разно">
 <!ENTITY mintrayr.prefs.clickbehavior "Приликом клика">
+<!ENTITY mintrayr.prefs.showalways "Схов алваис">
