--- a/chrome/locale/sv-SE/prefs.dtd
+++ b/chrome/locale/sv-SE/prefs.dtd
@@ -11,3 +11,4 @@
 <!ENTITY mintrayr.prefs.watchwindows "Tillämpa på fönster">
 <!ENTITY mintrayr.prefs.misc "Övrigt">
 <!ENTITY mintrayr.prefs.clickbehavior "Musklickbeteende">
+<!ENTITY mintrayr.prefs.showalways "Visa alltid">
