--- a/chrome/locale/tr/prefs.dtd
+++ b/chrome/locale/tr/prefs.dtd
@@ -11,3 +11,4 @@
 <!ENTITY mintrayr.prefs.watchwindows "Pencereleri İzle">
 <!ENTITY mintrayr.prefs.misc "Çeşitli">
 <!ENTITY mintrayr.prefs.clickbehavior "Tıklama Davranışı">
+<!ENTITY mintrayr.prefs.showalways "Her zaman göster">
