--- a/chrome/locale/zh-TW/prefs.dtd
+++ b/chrome/locale/zh-TW/prefs.dtd
@@ -11,3 +11,4 @@
 <!ENTITY mintrayr.prefs.watchwindows "監視的視窗">
 <!ENTITY mintrayr.prefs.misc "雜項">
 <!ENTITY mintrayr.prefs.clickbehavior "滑鼠點擊行為">
+<!ENTITY mintrayr.prefs.showalways "永遠顯示">
