--- a/chrome/locale/pt/prefs.dtd
+++ b/chrome/locale/pt/prefs.dtd
@@ -11,3 +11,4 @@
 <!ENTITY mintrayr.prefs.watchwindows "Ver janelas">
 <!ENTITY mintrayr.prefs.misc "Diversos">
 <!ENTITY mintrayr.prefs.clickbehavior "Comportamento do clique">
+<!ENTITY mintrayr.prefs.showalways "Mostrar sempre">
