--- a/chrome/locale/zh-CN/prefs.dtd
+++ b/chrome/locale/zh-CN/prefs.dtd
@@ -11,4 +11,4 @@
 <!ENTITY mintrayr.prefs.watchwindows "监视窗口">
 <!ENTITY mintrayr.prefs.misc "杂项">
 <!ENTITY mintrayr.prefs.clickbehavior "点击时行为">
-<!ENTITY mintrayr.prefs.showalways "永遠顯示">
+<!ENTITY mintrayr.prefs.showalways "永远显示">
