--- a/chrome/locale/fr/keys.dtd
+++ b/chrome/locale/fr/keys.dtd
@@ -1,2 +1,2 @@
-<!ENTITY mintrayr.keys.minimize.keycode "VK_F9">
-<!ENTITY mintrayr.keys.minimize.modifiers " ">
+<!ENTITY mintrayr.keys.minimize.key "Y">
+<!ENTITY mintrayr.keys.minimize.modifiers "control shift">
